--- a/src/assets/stylesheets/components/_ButtonLoadMore.scss
+++ b/src/assets/stylesheets/components/_ButtonLoadMore.scss
@@ -7,7 +7,7 @@
     color: $poa-purple;
     cursor: pointer;
     display: flex;
-    font-size: 17px;
+    font-size: 16px;
     font-weight: 400;
     height: 42px;
     justify-content: center;
