--- a/src/assets/stylesheets/helpers/_brand-icons-mixins.scss
+++ b/src/assets/stylesheets/helpers/_brand-icons-mixins.scss
@@ -5,5 +5,10 @@
     font-size: 0;
     justify-content: center;
     line-height: 0;
-    transition: background-color 0.25s ease-out;
+    transition: box-shadow 0.15s ease-out;
+
+    &:active,
+    &:hover {
+        box-shadow: 0 0 15px 0 rgba(#666, 0.3);
+    }
 }
